--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: gray;
+    font-size: 18px;
 }
 .container {
     width: 100%;
@@ -11,6 +12,7 @@ body {
 .header {
     width: 80%;
     height: 20%;
+    margin-left: 5%;
     background-color: brown;
 }
 .main {
@@ -23,7 +25,6 @@ body {
 .top-aside {
     width: 65%;
     height: 70%;
-    float: left;
-    margin-left: 5%;
+    float: right;
     margin-left: background-color: crimson;
 }
