--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
     width: 80%;
     height: 20%;
     margin-left: 5%;
+    margin-right: 5%;
     background-color: brown;
 }
 .main {
@@ -23,8 +24,23 @@ body {
     margin-left: background-color: crimson;
 }
 .top-aside {
-    width: 65%;
-    height: 70%;
+    width: 25%;
+    height: 10 %;
     float: right;
-    margin-left: background-color: crimson;
+    margin-left: background-color: grey;
+    margin-right: 5%;
+}
+.middle-aside {
+    width: 25%;
+    height: 20%;
+    float: right;
+    margin-left: background-color: grey;
+    margin-right: 5%;
+}
+.bottom-aside {
+    width: 25%;
+    height: 20%;
+    float: right;
+    margin-left: background-color: grey;
+    margin-right: 5%;
 }
