--- a/css/app.css
+++ b/css/app.css
@@ -18,11 +18,32 @@
         margin: 0 auto;
         clear: both;
     }
+    /*********
+******Background image
+in header*********/
+
     .imagebg {
         background-image: url(../img/Bethbg.jpg);
         width: 100%;
         height: 600px;
+        background-size: cover;
     }
+
+
+
+
+/*
+    .imagebg:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
+        opacity: .6;
+    }
+*/
     /*    Setting the navigation bar to be responsive */
 
     @media only screen and (min-width: 1200px) {
