--- a/css/app.css
+++ b/css/app.css
@@ -321,7 +321,16 @@ in header*********/
     /************Placing the text-content-paper on the notepad in image ****************/
 
     .content-paper {
-        -ms-transform: rotate(-8deg);
-        -webkit-transform: rotate(-8deg);
-        transform: rotate(-8deg);
+        -ms-transform: rotate(-9deg);
+        -webkit-transform: rotate(-9deg);
+        transform: rotate(-9deg);
+        padding-left: 15%;
+        color: #e67e22;
+    }
+    /*The second row*/
+
+    .second {
+        width: 100%;
+        height: 400px;
+        background-color: snow;
     }
