--- a/css/app.css
+++ b/css/app.css
@@ -16,9 +16,8 @@
     .container {
         width: 100%;
         height: auto;
-
         margin: 0 auto;
-/*
+        /*
         clear: both;
          position: relative;
 */
@@ -338,4 +337,23 @@ in header*********/
         width: 100%;
         height: 400px;
         background-color: snow;
+        padding-top: 8%;
+        background-color: dimgrey;
+    }
+    .about {
+        text-transform: uppercase;
+        text-align: left;
+        color: #e67e22;
+    }
+    .text {
+        color: black;
+        font-size: 15px;
+        text-align: left;
+    }
+    .list ul {
+        list-style-type: none;
+        text-decoration: none;
+    }
+    .list ul li {
+        text-decoration: none;
     }
