--- a/css/app.css
+++ b/css/app.css
@@ -1,38 +1,40 @@
-    body {
-        background: black;
-        overflow-x: hidden;
-    }
-    .clearfix:before,
-    .clearfix:after {
-        content: "";
-        display: table;
-    }
-    .clearfix:after {
-        clear: both;
-    }
-    .clearfix {
-        *zoom: 1;
-    }
-    .container {
-        width: 100%;
-        height: auto;
-        margin: 0 auto;
-        /*
+body {
+    background: black;
+    overflow-x: hidden;
+}
+.clearfix:before,
+.clearfix:after {
+    content: "";
+    display: table;
+}
+.clearfix:after {
+    clear: both;
+}
+.clearfix {
+    *zoom: 1;
+}
+.container {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    /*
         clear: both;
          position: relative;
 */
-    }
-    /*********
+}
+
+/*********
 ******Background image
 in header*********/
 
-    .imagebg {
-        background-image: url(../img/Bethbg.jpg);
-        width: 100%;
-        height: 600px;
-        background-size: cover;
-    }
-    /*
+.imagebg {
+    background-image: url(../img/Bethbg.jpg);
+    width: 100%;
+    height: 600px;
+    background-size: cover;
+}
+
+/*
     .imagebg:before {
         content: '';
         position: absolute;
@@ -44,326 +46,359 @@ in header*********/
         opacity: .6;
     }
 */
-    /*    Setting the navigation bar to be responsive */
 
-    @media only screen and (min-width: 1200px) {
-        .container {
-            width: 1210px;
-        }
-    }
-    @media only screen and (min-width: 960px) and (max-width: 1199px) {
-        .container {
-            width: 1030px;
-        }
-    }
-    @media only screen and (min-width: 768px) and (max-width: 959px) {
-        .container {
-            width: 682px;
-        }
-    }
-    @media only screen and (min-width: 480px) and (max-width: 767px) {
-        .container {
-            width: 428px;
-            margin: 0 auto;
-        }
-    }
-    @media only screen and (max-width: 479px) {
-        .container {
-            width: 320px;
-            margin: 0 auto;
-        }
-    }
-    /*End -responsiveness settings*/
 
-    .mcd-menu {
-        list-style: none;
-        padding: 0;
-        margin: o;
-        background: black;
-        border-radius: 2px;
-        -moz-border-radius: 2px;
-        -webkit-border-radius: 2px;
-        width: 250px;
-        position: relative;
+/*    Setting the navigation bar to be responsive */
+
+@media only screen and (min-width: 1200px) {
+    .container {
+        width: 1210px;
     }
-    .mcd-menu li a {
-        display: block;
-        text-decoration: none;
-        padding: 15px 25px;
-        color: snow;
-        text-align: left;
-        height: 40px;
-        position: relative;
-        border-bottom: 1px solid #EEE;
+}
+@media only screen and (min-width: 960px) and (max-width: 1199px) {
+    .container {
+        width: 1030px;
     }
-    .mcd-menu li a i {
-        float: left;
-        font-size: 25px;
-        margin: 0 10px 0 0;
+}
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .container {
+        width: 682px;
     }
-    .mcd-menu li a p {
-        float: left;
-        margin: 0;
+}
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .container {
+        width: 428px;
+        margin: 0 auto;
     }
-    .mcd-menu li a strong {
-        display: block;
-        text-transform: uppercase;
+}
+@media only screen and (max-width: 479px) {
+    .container {
+        width: 320px;
+        margin: 0 auto;
     }
-    .mcd-menu li a strong,
-    .mcd-menu li a i {
-        position: relative;
-        transition: all 300ms linear;
-        -o-transition: all 300ms linear;
-        -ms-transition: all 300ms linear;
-        -moz-transition: all 300ms linear;
-        -webkit-transition: all 300ms linear;
-    }
-    .mcd-menu li:hover a strong {
-        opacity: 1;
-        -webkit-animation: moveFromLeft 300ms ease-in-out;
-        -moz-animation: moveFromLeft 300ms ease-in-out;
-        -ms-animation: moveFromLeft 300ms ease-in-out;
-        -o-animation: moveFromLeft 300ms ease-in-out;
-        animation: moveFromLeft 300ms ease-in-out;
-    }
-    .mcd-menu li:hover > a {
-        color: #e67e22;
-    }
-    .mcd-menu li a.active {
-        position: relative;
-        color: #e67e22;
-        border: 0;
-        box-shadow: 0 0 5px #DDD;
-        -moz-box-shadow: 0 0 5px #DDD;
-        -webkit-box-shadow: 0 0 5px #DDD;
-        border-left: 4px solid #e67e22;
-        border-right: 4px solid #e67e22;
-        margin: 0 -4px;
-        /* == */
-    }
-    .mcd-menu li a.active:before {
-        content: "";
-        position: absolute;
-        top: 42%;
-        left: 0;
-        border-left: 5px solid #e67e22;
-        border-top: 5px solid transparent;
-        border-bottom: 5px solid transparent;
-    }
-    .mcd-menu li a.active:after {
-        content: "";
-        position: absolute;
-        top: 42%;
-        right: 0;
-        border-right: 5px solid #e67e22;
-        border-top: 5px solid transparent;
-        border-bottom: 5px solid transparent;
-    }
-    @-webkit-keyframes moveFromTop {
-        from {
-            opacity: 0;
-            -webkit-transform: translateY(200%);
-            -moz-transform: translateY(200%);
-            -ms-transform: translateY(200%);
-            -o-transform: translateY(200%);
-            transform: translateY(200%);
-        }
-        to {
-            opacity: 1;
-            -webkit-transform: translateY(0%);
-            -moz-transform: translateY(0%);
-            -ms-transform: translateY(0%);
-            -o-transform: translateY(0%);
-            transform: translateY(0%);
-        }
-    }
-    @-webkit-keyframes moveFromLeft {
-        from {
-            opacity: 0;
-            -webkit-transform: translateX(200%);
-            -moz-transform: translateX(200%);
-            -ms-transform: translateX(200%);
-            -o-transform: translateX(200%);
-            transform: translateX(200%);
-        }
-        to {
-            opacity: 1;
-            -webkit-transform: translateX(0%);
-            -moz-transform: translateX(0%);
-            -ms-transform: translateX(0%);
-            -o-transform: translateX(0%);
-            transform: translateX(0%);
-        }
-    }
-    @-webkit-keyframes moveFromRight {
-        from {
-            opacity: 0;
-            -webkit-transform: translateX(-200%);
-            -moz-transform: translateX(-200%);
-            -ms-transform: translateX(-200%);
-            -o-transform: translateX(-200%);
-            transform: translateX(-200%);
-        }
-        to {
-            opacity: 1;
-            -webkit-transform: translateX(0%);
-            -moz-transform: translateX(0%);
-            -ms-transform: translateX(0%);
-            -o-transform: translateX(0%);
-            transform: translateX(0%);
-        }
-    }
-    .mcd-menu li ul,
-    .mcd-menu li ul li ul {
-        position: absolute;
-        height: auto;
-        min-width: 200px;
-        padding: 0;
-        margin: 0;
-        background: #FFF;
-        /*border-top: 4px solid #e67e22;*/
+}
+
+/*End -responsiveness settings*/
+
+.mcd-menu {
+    list-style: none;
+    padding: 0;
+    margin: o;
+    background: black;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    width: 250px;
+    position: relative;
+}
+.mcd-menu li a {
+    display: block;
+    text-decoration: none;
+    padding: 15px 25px;
+    color: snow;
+    text-align: left;
+    height: 40px;
+    position: relative;
+    border-bottom: 1px solid #EEE;
+}
+.mcd-menu li a i {
+    float: left;
+    font-size: 25px;
+    margin: 0 10px 0 0;
+}
+.mcd-menu li a p {
+    float: left;
+    margin: 0;
+}
+.mcd-menu li a strong {
+    display: block;
+    text-transform: uppercase;
+}
+.mcd-menu li a strong,
+.mcd-menu li a i {
+    position: relative;
+    transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -webkit-transition: all 300ms linear;
+}
+.mcd-menu li:hover a strong {
+    opacity: 1;
+    -webkit-animation: moveFromLeft 300ms ease-in-out;
+    -moz-animation: moveFromLeft 300ms ease-in-out;
+    -ms-animation: moveFromLeft 300ms ease-in-out;
+    -o-animation: moveFromLeft 300ms ease-in-out;
+    animation: moveFromLeft 300ms ease-in-out;
+}
+.mcd-menu li:hover > a {
+    color: #e67e22;
+}
+.mcd-menu li a.active {
+    position: relative;
+    color: #e67e22;
+    border: 0;
+    box-shadow: 0 0 5px #DDD;
+    -moz-box-shadow: 0 0 5px #DDD;
+    -webkit-box-shadow: 0 0 5px #DDD;
+    border-left: 4px solid #e67e22;
+    border-right: 4px solid #e67e22;
+    margin: 0 -4px;
+    /* == */
+}
+.mcd-menu li a.active:before {
+    content: "";
+    position: absolute;
+    top: 42%;
+    left: 0;
+    border-left: 5px solid #e67e22;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+}
+.mcd-menu li a.active:after {
+    content: "";
+    position: absolute;
+    top: 42%;
+    right: 0;
+    border-right: 5px solid #e67e22;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+}
+@-webkit-keyframes moveFromTop {
+    from {
         opacity: 0;
-        visibility: hidden;
-        transition: all 300ms linear;
-        -o-transition: all 300ms linear;
-        -ms-transition: all 300ms linear;
-        -moz-transition: all 300ms linear;
-        -webkit-transition: all 300ms linear;
-        /*top: 130px;*/
-        z-index: 1000;
-        /* == */
-        left: 280px;
-        top: 0px;
-        border-left: 4px solid #e67e22;
-        /* == */
+        -webkit-transform: translateY(200%);
+        -moz-transform: translateY(200%);
+        -ms-transform: translateY(200%);
+        -o-transform: translateY(200%);
+        transform: translateY(200%);
     }
-    .mcd-menu li ul:before {
-        content: "";
-        position: absolute;
-        top: 25px;
-        left: -9px;
-        border-right: 5px solid #e67e22;
-        border-bottom: 5px solid transparent;
-        border-top: 5px solid transparent;
-        /* == */
-    }
-    .mcd-menu li:hover > ul,
-    .mcd-menu li ul li:hover > ul {
-        display: block;
+    to {
         opacity: 1;
-        visibility: visible;
-        /*top: 100px;*/
-        /* == */
-        left: 250px;
+        -webkit-transform: translateY(0%);
+        -moz-transform: translateY(0%);
+        -ms-transform: translateY(0%);
+        -o-transform: translateY(0%);
+        transform: translateY(0%);
     }
-    @-webkit-keyframes moveFromLeft {
-        from {
-            opacity: 0;
-            -webkit-transform: translateX(200%);
-            -moz-transform: translateX(200%);
-            -ms-transform: translateX(200%);
-            -o-transform: translateX(200%);
-            transform: translateX(200%);
-        }
-        to {
-            opacity: 1;
-            -webkit-transform: translateX(0%);
-            -moz-transform: translateX(0%);
-            -ms-transform: translateX(0%);
-            -o-transform: translateX(0%);
-            transform: translateX(0%);
-        }
+}
+@-webkit-keyframes moveFromLeft {
+    from {
+        opacity: 0;
+        -webkit-transform: translateX(200%);
+        -moz-transform: translateX(200%);
+        -ms-transform: translateX(200%);
+        -o-transform: translateX(200%);
+        transform: translateX(200%);
     }
-    @-webkit-keyframes moveFromRight {
-        from {
-            opacity: 0;
-            -webkit-transform: translateX(-200%);
-            -moz-transform: translateX(-200%);
-            -ms-transform: translateX(-200%);
-            -o-transform: translateX(-200%);
-            transform: translateX(-200%);
-        }
-        to {
-            opacity: 1;
-            -webkit-transform: translateX(0%);
-            -moz-transform: translateX(0%);
-            -ms-transform: translateX(0%);
-            -o-transform: translateX(0%);
-            transform: translateX(0%);
-        }
+    to {
+        opacity: 1;
+        -webkit-transform: translateX(0%);
+        -moz-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+        -o-transform: translateX(0%);
+        transform: translateX(0%);
     }
-    .mcd-menu {
-        width: 50px;
+}
+@-webkit-keyframes moveFromRight {
+    from {
+        opacity: 0;
+        -webkit-transform: translateX(-200%);
+        -moz-transform: translateX(-200%);
+        -ms-transform: translateX(-200%);
+        -o-transform: translateX(-200%);
+        transform: translateX(-200%);
     }
-    .mcd-menu li a {
-        position: relative;
-        padding: 12px 16px;
-        height: 60px;
+    to {
+        opacity: 1;
+        -webkit-transform: translateX(0%);
+        -moz-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+        -o-transform: translateX(0%);
+        transform: translateX(0%);
     }
-    .mcd-menu li a small {
-        display: none;
+}
+.mcd-menu li ul,
+.mcd-menu li ul li ul {
+    position: absolute;
+    height: auto;
+    min-width: 200px;
+    padding: 0;
+    margin: 0;
+    background: #FFF;
+    /*border-top: 4px solid #e67e22;*/
+    opacity: 0;
+    visibility: hidden;
+    transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -webkit-transition: all 300ms linear;
+    /*top: 130px;*/
+    z-index: 1000;
+    /* == */
+    left: 280px;
+    top: 0px;
+    border-left: 4px solid #e67e22;
+    /* == */
+}
+.mcd-menu li ul:before {
+    content: "";
+    position: absolute;
+    top: 25px;
+    left: -9px;
+    border-right: 5px solid #e67e22;
+    border-bottom: 5px solid transparent;
+    border-top: 5px solid transparent;
+    /* == */
+}
+.mcd-menu li:hover > ul,
+.mcd-menu li ul li:hover > ul {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+    /*top: 100px;*/
+    /* == */
+    left: 250px;
+}
+@-webkit-keyframes moveFromLeft {
+    from {
+        opacity: 0;
+        -webkit-transform: translateX(200%);
+        -moz-transform: translateX(200%);
+        -ms-transform: translateX(200%);
+        -o-transform: translateX(200%);
+        transform: translateX(200%);
     }
-    .mcd-menu li a strong {
-        display: none;
+    to {
+        opacity: 1;
+        -webkit-transform: translateX(0%);
+        -moz-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+        -o-transform: translateX(0%);
+        transform: translateX(0%);
     }
-    .mcd-menu li a:hover strong,
-    .mcd-menu li a.active strong {
-        display: block;
-        font-size: 12px;
-        padding: 3px 0;
-        position: absolute;
-        bottom: 0px;
-        left: 0;
-        background: #e67e22;
-        color: #FFF;
-        min-width: 100%;
-        text-transform: uppercase;
-        font-weight: normal;
-        text-align: center;
+}
+@-webkit-keyframes moveFromRight {
+    from {
+        opacity: 0;
+        -webkit-transform: translateX(-200%);
+        -moz-transform: translateX(-200%);
+        -ms-transform: translateX(-200%);
+        -o-transform: translateX(-200%);
+        transform: translateX(-200%);
     }
-    /*The navigation bar */
-    /************Placing the text-content-paper on the notepad in image ****************/
+    to {
+        opacity: 1;
+        -webkit-transform: translateX(0%);
+        -moz-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+        -o-transform: translateX(0%);
+        transform: translateX(0%);
+    }
+}
+.mcd-menu {
+    width: 50px;
+}
+.mcd-menu li a {
+    position: relative;
+    padding: 12px 16px;
+    height: 60px;
+}
+.mcd-menu li a small {
+    display: none;
+}
+.mcd-menu li a strong {
+    display: none;
+}
+.mcd-menu li a:hover strong,
+.mcd-menu li a.active strong {
+    display: block;
+    font-size: 12px;
+    padding: 3px 0;
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    background: #e67e22;
+    color: #FFF;
+    min-width: 100%;
+    text-transform: uppercase;
+    font-weight: normal;
+    text-align: center;
+}
 
-    .content-paper {
-        -ms-transform: rotate(-9deg);
-        -webkit-transform: rotate(-9deg);
-        transform: rotate(-9deg);
-        padding-left: 15%;
-        color: #e67e22;
-    }
-    /*The second row*/
+/*The navigation bar */
 
-    .second {
-        width: 100%;
-        height: 400px;
-        padding-top: 8%;
-        background-color: dimgrey;
-    }
-    .about {
-        text-transform: uppercase;
-        text-align: left;
-        color: #e67e22;
-    }
-    .text {
-        color: black;
-        font-size: 15px;
-        text-align: left;
-    }
-    .list ul {
-        list-style-type: none;
-        text-decoration: none;
-    }
-    .list ul li {
-        text-decoration: none;
-    }
-    /*****Row three *****/
 
-    .three {
-        width: 100%;
-        height: 500px;
-        background-color: snow;
-        padding-top: 4%;
-    }
-    .large-4 {
-        height: 500px;
-    }
+/************Placing the text-content-paper on the notepad in image ****************/
+
+.content-paper {
+    -ms-transform: rotate(-9deg);
+    -webkit-transform: rotate(-9deg);
+    transform: rotate(-9deg);
+    padding-left: 15%;
+    color: #e67e22;
+}
+
+/*The second row*/
+
+.second {
+    width: 100%;
+    height: 400px;
+    background-color: dimgrey;
+}
+
+/*
+row 2 first column
+            with profile picture
+*/
+
+.aside {
+    height: 400px;
+    color: snow;
+}
+.aside1 {
+    height: 200px;
+    background-color: chocolate;
+}
+.aside2 {
+    height: 100px;
+    color: chocolate;
+    padding-left: 50px;
+}
+.aside3 {
+    height: 100px;
+    background-color: chocolate;
+}
+
+/*second column in second row*/
+
+.about {
+    padding-top: 8%;
+    text-transform: uppercase;
+    text-align: left;
+    color: #e67e22;
+}
+.text {
+    color: black;
+    font-size: 15px;
+    text-align: left;
+}
+.list ul {
+    list-style-type: none;
+    text-decoration: none;
+}
+.list ul li {
+    text-decoration: none;
+}
+
+/*****Row three *****/
+
+.three {
+    height: 500px;
+    background-color: snow;
+    padding-top: 4%;
+}
+.large-4 {
+    height: 500px;
+}
