--- a/css/app.css
+++ b/css/app.css
@@ -353,23 +353,55 @@ row 2 first column
             with profile picture
 */
 
-.aside {
-    height: 400px;
-    color: snow;
-}
 .aside1 {
     height: 200px;
     background-color: chocolate;
+    color: snow;
 }
 .aside2 {
     height: 100px;
     color: chocolate;
     padding-left: 50px;
+    color: snow;
 }
 .aside3 {
     height: 100px;
     background-color: chocolate;
+    color: snow;
 }
+.nav_social ul {
+    list-style-type: none;
+}
+.nav_social li {
+    list-style-type: none;
+    text-decoration: none;
+    display: inline-block;
+    padding-right: 6px;
+}
+.nav_social li a {
+    text-decoration: none;
+}
+.fa {
+    color: snow;
+}
+
+/********  social media icons hover effects *****/
+
+.fa-google-plus-square:hover {
+    color: #dd4b39;
+}
+.fa-twitter-square:hover {
+    color: #00aced;
+}
+.fa-pinterest-square:hover {
+    color: #cb2027;
+}
+.fa-facebook-square:hover {
+    color: #3b5998;
+}
+
+/********  End hover effects *****/
+
 
 /*second column in second row*/
 
@@ -388,21 +420,36 @@ row 2 first column
     text-align: left;
 }
 .list ul {
-    list-style-type: none;
     text-decoration: none;
 }
 .list ul li {
+    list-style-type: none;
     text-decoration: none;
 }
-.skill {}
 
 /*****Row three *****/
 
 .three {
+    width: 100%;
     height: 500px;
-    background-color: green;
     padding-top: 4%;
+    background-color: snow;
 }
-.large-4 {
-    height: 500px;
+.port {
+    color: #e67e22;
+    padding-left: 8%;
+    text-transform: uppercase;
+    font-size: 25px;
+}
+.img1 {
+    height: 300px;
+    background-image: url(../img/FrontEndWebpng);
+}
+.img2 {
+    height: 300px;
+    background-image: url(../img/game%20of%20thrones.png);
+}
+.img3 {
+    height: 300px;
+    background-image: url(../img/queens.png);
 }
