--- a/css/app.css
+++ b/css/app.css
@@ -453,3 +453,11 @@ row 2 first column
     height: 300px;
     background-image: url(../img/queens.png);
 }
+
+/* row four containing blog post and stuff*/
+
+.four {
+    height: 500px;
+    width: 100%;
+    background-color: chocolate;
+}
