--- a/css/app.css
+++ b/css/app.css
@@ -433,7 +433,7 @@ row 2 first column
     width: 100%;
     height: 500px;
     padding-top: 4%;
-    background-color: snow;
+    background-color: darkgrey;
 }
 .port {
     color: #e67e22;
@@ -453,11 +453,41 @@ row 2 first column
     height: 300px;
     background-image: url(../img/queens.png);
 }
+.img_title {
+    text-align: center;
+    font-size: 20px;
+    padding-top: 4%;
+}
+.border {
+    border: 10px solid white;
+    -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0px 0px 20px rgba(0, 0, 0, .8);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .8);
+}
 
 /* row four containing blog post and stuff*/
 
 .four {
-    height: 500px;
+    height: 300px;
     width: 100%;
-    background-color: chocolate;
+    background-color: white;
+    padding-top: 5%;
+    padding-left: 7%;
+    padding-right: 5%;
+}
+.blogger {
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
+.header {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
+.cont {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: black;
+    text-align: left;
 }
