--- a/css/app.css
+++ b/css/app.css
@@ -494,8 +494,9 @@ row 2 first column
 
 /*row five*/
 
-.row5 {
+.five {
     width: 100%;
-    height: 400px;
+    height: 100px;
     background-color: aqua;
 }
+.five_col {}
