--- a/css/app.css
+++ b/css/app.css
@@ -456,18 +456,6 @@ row 2 first column
     text-transform: uppercase;
     font-size: 25px;
 }
-.img1 {
-    height: 300px;
-    background-image: url(../img/FrontEndWebpng);
-}
-.img2 {
-    height: 300px;
-    background-image: url(../img/game%20of%20thrones.png);
-}
-.img3 {
-    height: 300px;
-    background-image: url(../img/queens.png);
-}
 .img_title {
     text-align: center;
     font-size: 20px;
@@ -478,6 +466,23 @@ row 2 first column
     -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, .8);
     -moz-box-shadow: 0px 0px 20px rgba(0, 0, 0, .8);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .8);
+}
+
+/*** Overlay text on image hover***/
+
+.transition {
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    transition: .3s;
+}
+.overlay {
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, .6);
+    padding: 10px;
 }
 
 /* row four containing blog post and stuff*/
@@ -515,3 +520,15 @@ row 2 first column
     background-color: aqua;
 }
 .five_col {}
+
+/***Blog page css stars  here ****/
+
+.blog1 {
+    height: 250px;
+    width: 100%;
+}
+.blog2 {
+    width: 100%;
+    height: 700px;
+    background-color: aliceblue;
+}
