--- a/css/app.css
+++ b/css/app.css
@@ -557,7 +557,18 @@ heading of blog post******/
 
 .poster {
     height: 100px;
-    font-size: 350%;
+}
+.black {
+    font-size: 300%;
+    padding-left: 10%;
+    padding-top: 8%;
     color: black;
     font-family: 'Josefin Sans', sans-serif;
+}
+
+/*****third row with
+heading of blog post******/
+
+.blog3 {
+    height: auto;
 }
