--- a/css/app.css
+++ b/css/app.css
@@ -526,11 +526,6 @@ row 2 first column
     height: 250px;
     width: 100%;
 }
-.blog2 {
-    width: 100%;
-    height: 700px;
-    background-color: aliceblue;
-}
 .white {
     height: 250px;
 }
@@ -555,20 +550,40 @@ row 2 first column
 /*****second row with
 heading of blog post******/
 
-.poster {
-    height: 100px;
-}
 .black {
     font-size: 300%;
-    padding-left: 10%;
-    padding-top: 8%;
+    padding-left: 22%;
+    padding-top: 4%;
     color: black;
     font-family: 'Josefin Sans', sans-serif;
+}
+.blog2 {
+    width: 100%;
+    height: 220px;
+    background-color: aliceblue;
+}
+.poster {
+    height: 220px;
 }
 
 /*****third row with
 heading of blog post******/
 
 .blog3 {
+    width: 100%;
+    height: 700px;
+    background-color: aliceblue;
+    padding-left: 8%;
+}
+.intro {
     height: auto;
+}
+.date {
+    color: black;
+    font-size: 120%;
+}
+.owner {
+    font-family: 'Teko', sans-serif;
+    color: #e67e22;
+    font-size: 100%;
 }
