--- a/css/app.css
+++ b/css/app.css
@@ -445,33 +445,22 @@ row 2 first column
 
 .three {
     width: 100%;
-    height: 400px;
-    padding-top: 4%;
-    background-color: darkgrey;
-    font-family: 'Teko', sans-serif;
+    height: 500px;
+    background-color: snow;
 }
 .port {
     color: #e67e22;
-    padding-left: 8%;
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 40px;
+    background-color: snow;
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    font-family: 'Teko', sans-serif;
 }
-
-/*** Overlay text on image hover***/
-
-.transition {
-    -webkit-transition: .3s;
-    -moz-transition: .3s;
-    transition: .3s;
-}
-.overlay {
-    opacity: 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background: rgba(0, 0, 0, .6);
-    padding: 10px;
+img {
+    width: 300px;
+    height: 200px;
 }
 
 /* row four containing blog post and stuff*/
