--- a/css/app.css
+++ b/css/app.css
@@ -445,7 +445,7 @@ row 2 first column
 
 .three {
     width: 100%;
-    height: 500px;
+    height: 480px;
     background-color: snow;
 }
 .port {
@@ -460,46 +460,58 @@ row 2 first column
 }
 img {
     width: 300px;
-    height: 200px;
+    height: 210px;
 }
 
 /* row four containing blog post and stuff*/
 
 .four {
-    height: 300px;
+    height: 320px;
     width: 100%;
     background-color: white;
-    padding-top: 5%;
+    padding-top: 1%;
     padding-left: 7%;
     padding-right: 5%;
 }
 .blogger {
-    font-size: 30px;
+    font-size: 32px;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
 .header {
-    font-size: 20px;
+    font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
 .cont {
     font-family: 'Teko', sans-serif;
-    font-size: 15px;
+    font-size: 17px;
     color: black;
     text-align: left;
+}
+.border2 {
+    padding-bottom: 4%;
+    width: 95%;
+    border: 15px solid white;
+    -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0px 0px 20px rgba(0, 0, 0, .8);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .8);
 }
 
 /*row five*/
 
 .five {
     width: 100%;
-    height: 100px;
-    background-color: aqua;
+    height: 300px;
+    background-image: url(../img/imagebgg.jpg);
+}
+.five:hover {
+    opacity: 0.4;
+    color: snow;
 }
 .form {
     width: 100%;
-    height: 200px;
+    height: 600px;
 }
 
 /***Blog page css stars  here ****/
