--- a/css/app.css
+++ b/css/app.css
@@ -448,7 +448,8 @@ row 2 first column
     height: 480px;
     background-color: snow;
 }
-.port {
+.port,
+.skillset {
     color: #e67e22;
     text-transform: uppercase;
     font-size: 40px;
@@ -505,9 +506,20 @@ img {
     height: 300px;
     background-image: url(../img/imagebgg.jpg);
 }
-.five:hover {
-    opacity: 0.4;
-    color: snow;
+
+.five_col  {
+    height: 150px;
+}
+
+
+.skillset {
+
+    color: #e67e22;
+    text-transform: uppercase;
+    font-size: 40px;
+    text-align: center;
+    padding-top: 1%;
+    font-family: 'Teko', sans-serif;
 }
 .form {
     width: 100%;
