--- a/css/app.css
+++ b/css/app.css
@@ -463,6 +463,9 @@ img {
     width: 300px;
     height: 210px;
 }
+.thumbnail {
+    border: 8px solid grey;
+}
 
 /* row four containing blog post and stuff*/
 
@@ -486,7 +489,7 @@ img {
 }
 .cont {
     font-family: 'Teko', sans-serif;
-    font-size: 17px;
+    font-size: 0.9em;
     color: black;
     text-align: left;
 }
@@ -504,27 +507,44 @@ img {
 .five {
     width: 100%;
     height: 300px;
-    background-image: url(../img/imagebgg.jpg);
+    background-image: url(../img/bg%20bg.jpg);
 }
-
-.five_col  {
+.five_col {
     height: 150px;
 }
-
-
-.skillset {
-
-    color: #e67e22;
-    text-transform: uppercase;
-    font-size: 40px;
+.skillsetter {
     text-align: center;
-    padding-top: 1%;
-    font-family: 'Teko', sans-serif;
 }
-.form {
+.skillsetter h3 {
+    padding-top: 6%;
+    text-transform: uppercase;
+    color: #e67e22;
+    font-family: 'Teko', sans-serif;
+    text-align: center;
+    padding-left: 30%;
+    width: 100px;
+}
+.inform {
+    font-size: 20px;
+    padding-top: 2%;
+    text-transform: uppercase;
+    color: snow;
+    font-family: 'Teko', sans-serif;
+    text-align: center;
+}
+.formcont {
     width: 100%;
     height: 600px;
+    background-color: snow;
 }
+.iconic {
+    width: 100px;
+    height: 100px;
+    text-align: center;
+}
+
+/*row form */
+
 
 /***Blog page css stars  here ****/
 
