--- a/css/app.css
+++ b/css/app.css
@@ -338,6 +338,8 @@ in header*********/
     transform: rotate(-9deg);
     padding-left: 15%;
     color: #e67e22;
+    font-family: cursive;
+    font-size: 2em;
 }
 
 /*The second row*/
@@ -345,7 +347,7 @@ in header*********/
 .second {
     width: 100%;
     height: 400px;
-    background-color: dimgrey;
+    background-image: url(../img/bg%20bg.jpg);
 }
 
 /*
@@ -368,8 +370,8 @@ row 2 first column
 }
 .aside3 {
     height: 100px;
-    background-color: chocolate;
-    color: snow;
+    background-color: snow;
+    color: black;
 }
 .nav_social ul {
     list-style-type: none;
@@ -384,7 +386,7 @@ row 2 first column
     text-decoration: none;
 }
 .fa {
-    color: snow;
+    color: black;
 }
 
 /********  social media icons hover effects *****/
@@ -419,7 +421,7 @@ row 2 first column
     color: #e67e22;
 }
 .text {
-    color: black;
+    color: snow;
     font-size: 22px;
     text-align: left;
     font-family: 'Teko', sans-serif;
@@ -545,6 +547,17 @@ img {
 
 /*row form */
 
+.formset h2 {
+    text-transform: uppercase;
+    color: #e67e22;
+    font-family: 'Teko', sans-serif;
+}
+.formset {
+    background-color: gray;
+    border-radius: 20px;
+    margin-top: 20px;
+    padding-top: 2%;
+}
 
 /***Blog page css stars  here ****/
 
