--- a/css/app.css
+++ b/css/app.css
@@ -498,6 +498,9 @@ img {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
+.formcont {
+    height: 180px;
+}
 .cont {
     font-family: 'Teko', sans-serif;
     font-size: 0.9em;
@@ -566,6 +569,11 @@ img {
     border-radius: 20px;
     margin-top: 20px;
     padding-top: 2%;
+}
+.footer {
+    width: 100%;
+    height: 150px;
+    background-color: #292929;
 }
 
 /***Blog page css stars  here ****/
