--- a/css/app.css
+++ b/css/app.css
@@ -572,8 +572,19 @@ img {
 }
 .footer {
     width: 100%;
-    height: 150px;
+    height: 100px;
+    opacity: 0.9;
     background-color: #292929;
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-position: 0% 0%;
+    position: fixed;
+    bottom: 0pt;
+    left: 0pt;
+}
+.copy {
+    color: color: #e67e22;
+    text-align: center;
 }
 
 /***Blog page css stars  here ****/
