--- a/css/app.css
+++ b/css/app.css
@@ -331,7 +331,10 @@ in header*********/
 
 
 /************Placing the text-content-paper on the notepad in image ****************/
-
+.content_paper_name{
+    font-size: 2em;
+      font-family: cursive;
+}
 .content-paper {
     -ms-transform: rotate(-9deg);
     -webkit-transform: rotate(-9deg);
@@ -339,7 +342,7 @@ in header*********/
     padding-left: 15%;
     color: #e67e22;
     font-family: cursive;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 /*The second row*/
@@ -347,7 +350,9 @@ in header*********/
 .second {
     width: 100%;
     height: 400px;
-    background-image: url(../img/bg%20bg.jpg);
+
+        background-color: #292929;
+/*    background-image: url(../img/bg%20bg.jpg);*/
 }
 
 /*
@@ -521,7 +526,8 @@ img {
 .five {
     width: 100%;
     height: 300px;
-    background-image: url(../img/bg%20bg.jpg);
+     background-color: #292929;
+/*    background-image: url(../img/bg%20bg.jpg);*/
 }
 .five_col {
     height: 150px;
