--- a/css/app.css
+++ b/css/app.css
@@ -12,41 +12,58 @@ body {
     height: auto;
     margin: 0 auto;
 }
-#header{
-background:#333;
-width:100%;
-display:block;
-padding: 0px 0px 0px 0px;
-margin: 0px 0px 0px 0px;
-height:50px;
-border-bottom: #252525 2px solid;
+#header {
+    background: #333;
+    width: 100%;
+    display: block;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
+    height: 50px;
+    border-bottom: #252525 2px solid;
 }
-
- a{
-text-align:left;
-text-decoration:none;
-font-weight:300;
+a {
+    text-align: left;
+    text-decoration: none;
+    font-weight: 300;
 }
-#nav {padding-top:15px; text-align:center; margin: 0px auto; font-size:14px;  font-weight:500; }
-#nav ul {margin: 0; padding: 0; list-style-type: none; list-style-image: none;}
-#nav li {margin-right: 0px; display: inline;}
-#nav ul li a {text-decoration:none;  margin: 0px; padding: 10px 15px 0px 15px; color:#808080;}
-#nav ul li a:hover {color: #cccccc; text-decoration:none;}
-
-#nav li.current-menu-item a {color: #ffffff; text-decoration:none;}
-#nav li.current_page_item  {color: #ffffff;  text-decoration:none;}
-
-#top{
-background:#3498db;
-width:100%;
-min-height:100%;
-max-height:100%;
-height:373px;
-padding:90px 20px 10px 20px;
-margin: 0 auto 0 auto;
-text-align:center;
-border-bottom:#2980b9 10px solid;
-color:white;
+#nav {
+    padding-top: 15px;
+    text-align: center;
+    margin: 0px auto;
+    font-size: 0.8em;
+    font-weight: 700;
+}
+#nav ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    list-style-image: none;
+}
+#nav li {
+    margin-right: 0px;
+    display: inline;
+}
+#nav ul li a {
+    text-decoration: none;
+    margin: 0px;
+    padding: 10px 20px 0px 15px;
+    color: #808080;
+}
+#nav ul li a:hover {
+    color: #cccccc;
+    text-decoration: none;
+}
+#nav li.current-menu-item a {
+    color: #ffffff;
+    text-decoration: none;
+}
+#nav li.current_page_item {
+    color: #ffffff;
+    text-decoration: none;
+}
+.img_space {
+    width: 100%;
+    height: 420px;
 }
 
 /*********
@@ -60,10 +77,18 @@ in header*********/
 /************Placing the text-content-paper on the notepad in image ****************/
 
 .content_paper_name {
-    font-size: 2em;
+    width: 100%;
+    height: 420px;
+    padding-top: 10%;
+    font-size: 4em;
+    font-weight: 700;
     font-family: cursive;
     text-transform: uppercase;
+    color: #e67e22;
+    text-align: center;
 }
+
+/*****
 .content-paper {
     -ms-transform: rotate(-9deg);
     -webkit-transform: rotate(-9deg);
@@ -73,6 +98,8 @@ in header*********/
     font-family: cursive;
     font-size: 1.5em;
 }
+******/
+
 
 /*The second row*/
 
