--- a/css/app.css
+++ b/css/app.css
@@ -156,18 +156,17 @@ in header*********/
     border-radius: 99em;
 }
 .about {
-/*    padding-top: 10%;*/
+    /*    padding-top: 10%;*/
     text-transform: uppercase;
     font-family: 'Teko', sans-serif;
-    text-align: left;
     font-size: 3em;
     color: #e67e22;
     text-align: center;
 }
 .text {
+    text-align: center;
     color: #292929;
-    font-size: 22px;
-    text-align: left;
+    font-size: 1.3em;
     font-family: 'Teko', sans-serif;
 }
 .aside2 {
