removed border in images, portfolio

--- a/css/app.css
+++ b/css/app.css
@@ -250,9 +250,11 @@ img {
     width: 300px;
     height: 210px;
 }
+/*
 .thumbnail {
     border: 8px solid grey;
 }
+*/
 
 /* row four containing blog post and stuff*/
 
