--- a/css/app.css
+++ b/css/app.css
@@ -421,7 +421,7 @@ hr#thread3 {
 
 .footer {
     width: 100%;
-    height: 100px;
+    height: 200px;
     opacity: 0.9;
     background-color: #292929;
     background-repeat: repeat;
@@ -429,10 +429,12 @@ hr#thread3 {
     background-position: 0% 0%;
     bottom: 0pt;
     left: 0pt;
+    padding-top: 3%;
 }
 .copy {
-    color: color: #e67e22;
-    text-align: center;
+    color: whitesmoke;
+    float: left;
+    padding-left: 5%;
 }
 
 /***Blog page css stars  here ****/
