contact form added

--- a/css/app.css
+++ b/css/app.css
@@ -481,7 +481,7 @@ heading of blog post******/
 }
 .forms {
     width: 100%;
-    height: auto;
+    height: 600px;
 }
 .poster {
     height: 220px;
