fixing the spanned items

--- a/css/app.css
+++ b/css/app.css
@@ -513,7 +513,7 @@ heading of blog post******/
 #contact #form {
     width: 410px;
 }
-#contact #form span {
+#contact #form span2 {
     display: block;
     font-size: 2.5em;
     float: left;
