--- a/css/app.css
+++ b/css/app.css
@@ -718,7 +718,7 @@ section:hover .icon > i {
     background-image: url(../img/254_kiddies.png);
 }
 .study3 {
-    background-image: url(../img/Front%20End%20Exercises.png);
+    background-image: url(../img/waototokumi.png);
 }
 .study4 {
     background-image: url(../img/ByhandDesigns.png);
